Found the issue, the audio player needs to have some width divined for it to work on mobile :shrug:

--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ p {
     margin: 0px 16px 0px 16px;
 }
 
+audio {
+    width: 400px;
+}
+
 .mark {
     border-bottom: 1px solid #000;
     top: -14px;
